<resources>

    <string name="vou_ler">I\'m going to read</string>
    <string name="t_tulo_do_livro">Book Title</string>
    <string name="tipo_valor">Book Type :</string>
    <string name="tipo">Book Type</string>
    <string name="terror">Horror</string>
    <string name="tecnologia">Technology</string>
    <string name="status_valor">Reading Status :</string>
    <string name="status">Reading Status</string>
    <string name="bt_sobre">About</string>
    <string name="barra_sobre">About</string>
    <string name="sobre">About</string>
    <string name="salvar">Save</string>
    <string name="romance">Romance</string>
    <string name="quero_ler">Want to Read</string>
    <string name="politica">Politics</string>
    <string name="poesia">Poetry</string>
    <string name="numero_paginas_valor">Number of pages:</string>
    <string name="numeroPaginas">Number of pages</string>
    <string name="log_da_utfpr">UTFPR Logo</string>
    <string name="livro_de_titulo">Book Title :</string>
    <string name="limpar">Clear</string>
    <string name="lido">Read</string>
    <string name="lendo">Reading</string>
    <string name="app_name">Reading Manager</string>
    <string name="foi_selecionado">Was selected!</string>
    <string name="ficcaoo_cientifica">Science Fiction</string>
    <string name="favorito_valor">Favorite :</string>
    <string name="favorito">Favorite</string>
    <string name="menuItemExcluir">Delete</string>
    <string name="menuItemEditar">Edit</string>
    <string name="drama">Drama</string>
    <string name="descricao_app">Description: The Book Reading Manager is an app created to organize and track reading progress. The system allows you to register books with details such as author, title, and number of pages, as well as manage the reading status of each one, classifying them as \"Read,\" \"Reading,\" or \"Want to Read.\"</string>
    <string name="data_termino_valor">Reading End Date :</string>
    <string name="dataTermino">Reading End Date</string>
    <string name="data_inicio_valor">Reading Start Date :</string>
    <string name="dataInicio">Reading Start Date</string>
    <string name="curso">UTFPR Android Development Course.</string>
    <string name="cristao">Christian</string>
    <string name="controle_leitura_livros">Book Reading Control</string>
    <string name="cadastro_de_livros">Book Registration</string>
    <string name="aventura">Adventure</string>
    <string name="autoria">Author: Cleverson Jose Cordeiro</string>
    <string name="anotacao_valor">Annotation :</string>
    <string name="anotacao">Annotation</string>
    <string name="bt_adicionar">Add</string>
    <string name="adicionar">Add</string>
    <string name="acao">Action</string>
    <string name="status_leitura">Reading Status :</string>
    <string name="titulo">Book Title</string>
    <string name="titulo_valor">Book Title :</string>
    <string name="autor">Book Author</string>
    <string name="autor_valor">Book Author :</string>
    <string name="nome_utfpr_por_extenso">FEDERAL UNIVERSITY OF TECHNOLOGY - PARANA</string>
    <string name="sugerir_tipo" >Sugestion Type</string>
    <string name="restaurar">Restore Defaults</string>
    <string name="restaurar_configuracoes_padrao_instalacao">The settings have been restored to the installation default!</string>
    <string name="ordenacao">Sorting</string>
    <string name="editar_livro">Edit Book</string>
    <string name="os_o_valor_dos_campos_foram_apagados">The field values have been cleared!</string>
    <string name="o_tipo_deve_ser_selecionado">The Type must be selected!</string>
    <string name="obrigatorio_incluir_autor_e_titulo_do_livro_e_a_quantidade_de_paginas">It is mandatory to include: Author and Book Title and the number of pages!</string>
    <string name="o_livro_deve_conter_no_m_nimo_10_paginas">The book must contain at least 10 pages!</string>
    <string name="por_favor_digite_um_n_mero_v_lido_de_paginas">Please enter a valid number of pages!</string>
    <string name="a_data_de_t_rmino_n_o_pode_ser_menor_que_a_data_inicio">The end date cannot be earlier than the start date.</string>
    <string name="erro_ao_validar_a_data_use_o_formato_dd_mm_yyyy">Error validating the date. Use the DD/MM/YYYY format.</string>
    <string name="o_status_obrigat_rio">The status is mandatory!</string>
    <string name="necess_rio_informar_a_data_de_inicio_e_fim">It is necessary to provide the start and end dates!</string>
    <string name="formato_de_data_de_in_cio_inv_lido_favor_usar_o_padr_o_dd_mm_yyyy">Invalid start date format. Please use the DD/MM/YYYY standard.</string>
    <string name="formato_de_data_de_t_rmino_inv_lido_favor_usar_o_padr_o_dd_mm_yyyy">Invalid end date format. Please use the DD/MM/YYYY standard.</string>
    <string name="o_tipo_obrigat_rio">The type is mandatory!</string>
    <string name="aviso">Warning</string>
    <string name="ok">OK</string>
    <string name="confirmation">Confirmation</string>
    <string name="nao">No</string>
    <string name="sim">Yes</string>
    <string name="tem_certeza_que_quer_excluir">Do you really want to delete this?\"</string>
    <string name="certeza_que_quer_restaurar_para_as_configura_es_de_instala_o">Are you sure you want to restore to installation settings?</string>
    <string name="erro_ao_tentar_inserir">Error inserting into the database!</string>
    <string name="erro_ao_tentar_alterar_o_resgistro">Error trying to update the record!</string>
    <string name="erro_ao_tentar_excluir_o_livro">Erro ao tentar excluir o Livro!</string>
    <string name="desfazer_a_altera_o_realizada">Undo the change made?</string>
    <string name="desfazer">Undo</string>
    <string name="erro_ao_tentar_alterar">Error trying to Update!</string>

</resources>